More pipeline UI changes, show single pipeline, and link to logs

--- a/vyne-query-service/src/main/web/src/app/pipelines/pipeline-builder/pipeline-builder.component.scss
+++ b/vyne-query-service/src/main/web/src/app/pipelines/pipeline-builder/pipeline-builder.component.scss
@@ -1,8 +1,10 @@
 @import "src/theme";
 @import "src/forms";
 
+:host {
+  flex-grow: 1;
+}
 .form-container {
-  width: 50vw;
   max-width: 1000px;
 }
 
