fixed scrollbars not appearing correctly in a few places

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -1,5 +1,5 @@
-<as-split direction="vertical" unit="pixel">
-  <as-split-area [size]="220">
+<as-split direction="vertical" unit="percent">
+  <as-split-area [size]="50">
     <div class="code-editor-section">
       <div class="code-viewer-container">
         <app-code-editor
