fix scrollbars not visible in type viewer, replace code viewer with one that sizes properly, fix column width in UI resizing incorrectly

--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -61,7 +61,7 @@
         </td-highlight>
       </mat-tab>
       <mat-tab [label]="schemaTabLabel" *ngIf="contentType">
-        <app-code-viewer *ngIf="activeTab === 1" [sources]="contentType?.sources" #appCodeViewer></app-code-viewer>
+        <app-code-viewer [sources]="contentType?.sources" #appCodeViewer></app-code-viewer>
       </mat-tab>
       <mat-tab [label]="parsedDataTabLabel" *ngIf="parsedInstance">
         <div class="mat-tab-content">
