--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -37,7 +37,8 @@
 
     <section>
       <h2>Source code</h2>
-      <app-code-viewer [sources]="sources"></app-code-viewer>
+      <app-simple-code-viewer [content]="sourceTaxi" lang="taxi" [expanded]="true"></app-simple-code-viewer>
+<!--      <app-code-viewer [sources]="sources"></app-code-viewer>-->
     </section>
   </div>
   <div class="spacer-gap"></div>
