--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -36,8 +36,8 @@
     </section>
 
     <section>
-      <h2>Source code</h2>
-      <app-simple-code-viewer [content]="sourceTaxi" lang="taxi" [expanded]="true"></app-simple-code-viewer>
+      <h2>Definition</h2>
+      <app-simple-code-viewer name="Taxi" [content]="sourceTaxi" lang="taxi" [expanded]="true"></app-simple-code-viewer>
 <!--      <app-code-viewer [sources]="sources"></app-code-viewer>-->
     </section>
   </div>
