--- a/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
@@ -1,3 +1,3 @@
-<ngx-monaco-editor class="code-editor"
+<ngx-monaco-editor
                    [ngModel]="content" (ngModelChange)="updateContent($event)" #editor>
 </ngx-monaco-editor>
