fix bug where dragging of lineage graph stops working

--- a/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
+++ b/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
@@ -1,4 +1,4 @@
-<div #chartOuterContianer class="chart-outer-container">
+<div #chartOuterContianer class="chart-outer-container" *ngIf="schemaGraph?.nodes?.length > 0">
   <ngx-graph class="chart-container" [links]="schemaGraph.links"
              [nodes]="schemaGraph.nodes"
              [enableZoom]="true"
