display consumers/producers in the type view

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -25,7 +25,10 @@
       <app-enum-table [type]="type"></app-enum-table>
     </section>
     <section>
-      <h2>Links</h2>
+      <h2>Usages</h2>
+      <h3>Services</h3>
+      <app-usages-table [typeUsages]="typeUsages"></app-usages-table>
+      <h3>Chart</h3>
       <app-type-link-graph-container [member]="schemaMember"></app-type-link-graph-container>
     </section>
 
