--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -15,6 +15,9 @@
     <section>
       <app-description-editor-container [type]="type"></app-description-editor-container>
     </section>
+    <section>
+      <app-tags-section [metadata]="type.metadata" [type]="type"></app-tags-section>
+    </section>
     <app-inheritance-graph *ngIf="inheritanceView" [inheritable]="inheritanceView"></app-inheritance-graph>
     <section *ngIf="hasAttributes">
       <h2>Attributes</h2>
