--- a/vyne-query-service/src/main/web/src/typography.scss
+++ b/vyne-query-service/src/main/web/src/typography.scss
@@ -75,6 +75,13 @@ $font-sans-alt: $body-font, /*Hind,*/ system-ui,BlinkMacSystemFont,-apple-system
   //@include links();
 }
 
+.metadata {
+  font-size: 0.8rem;
+  margin-right: 0.8rem;
+  @include badge($color2);
+}
+
+
 .font-sans-alt {
   font-family:$font-sans-alt;
 }
@@ -85,5 +92,11 @@ h4 {
   font-size: 0.8rem;
   text-transform: uppercase;
   color: $blue-grey-2;
-  margin: 0;
+  margin: 0 0 0.5rem;
 }
+
+.subtle {
+  font-size: 0.9rem;
+  opacity: 0.6;
+}
+
