pushing of annotation changes through to schema server from ui

--- a/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-query-service/src/main/web/src/styles.scss
@@ -3,6 +3,7 @@
 @import "../node_modules/ag-grid-community/src/styles/ag-grid.scss";
 @import "../node_modules/ag-grid-community/src/styles/ag-theme-alpine/sass/ag-theme-alpine-mixin.scss";
 @import '~highlight.js/styles/ocean.css';
+@import "~@ng-select/ng-select/themes/material.theme.css";
 
 .ag-theme-alpine {
   @include ag-theme-alpine((
