--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -15,7 +15,7 @@
     <section>
       <app-description-editor-container [type]="type"></app-description-editor-container>
     </section>
-    <section>
+    <section class="no-h2">
       <app-tags-section [metadata]="type.metadata" [type]="type"></app-tags-section>
     </section>
     <app-inheritance-graph *ngIf="inheritanceView" [inheritable]="inheritanceView"></app-inheritance-graph>
