--- a/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
@@ -72,6 +72,7 @@ mat-header-row {
 }
 mat-row {
   cursor: pointer;
+  align-items: start;
 
   &:hover {
     background-color: rgba($dark-grey-2, 0.1);
