--- a/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
@@ -37,13 +37,17 @@
   margin: 2rem auto;
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: flex-start;
 
   mat-table {
+    opacity: 1;
     flex-grow: 1;
     width: 100%;
     margin-right: 1rem;
     border-radius: 8px;
+  }
+  mat-table.no-search {
+    opacity: 0;
   }
 
   mat-select {
@@ -64,7 +68,7 @@
 .mat-column-publishers, .mat-column-consumers {
   min-width: 20rem;
   flex-grow: 0;
-  margin-right: 1rem;
+  margin: 1rem;
 }
 
 mat-header-row {
@@ -72,7 +76,7 @@ mat-header-row {
 }
 mat-row {
   cursor: pointer;
-  align-items: start;
+  align-items: flex-start;
 
   &:hover {
     background-color: rgba($dark-grey-2, 0.1);
