added type lineage graph

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -32,6 +32,7 @@
       <h3>Services</h3>
       <app-usages-table [typeUsages]="typeUsages"></app-usages-table>
       <h3>Chart</h3>
+      <app-lineage-graph-container [type]="schemaMember"></app-lineage-graph-container>
       <app-type-link-graph-container [member]="schemaMember"></app-type-link-graph-container>
     </section>
 
