--- a/vyne-query-service/src/main/web/src/typography.scss
+++ b/vyne-query-service/src/main/web/src/typography.scss
@@ -100,3 +100,9 @@ h4 {
   opacity: 0.6;
 }
 
+.help-text {
+  font-size: 0.9rem;
+  margin-right: 2rem;
+  overflow: hidden;
+  color: lighten($body, 15%);
+}
