--- a/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-list/type-list.component.html
@@ -1,4 +1,4 @@
-<app-header-bar title="Data Catalogue">
+<app-header-bar title="Data Catalog">
 </app-header-bar>
 <app-filter-types (filterChanged)="updateFilter($event)"></app-filter-types>
 <div class="cdk-viewport-container container">
