updated catalog view

--- a/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
@@ -87,6 +87,10 @@ mat-row {
 }
 
 .operations-container {
+  justify-content: right;
   display: flex;
-  flex-wrap: wrap;
+}
+
+.row {
+  width: 100%;
 }
