minor UI tweaks, fix test

--- a/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-catalog/search/data-catalog-search.component.scss
@@ -94,3 +94,10 @@ mat-row {
 .row {
   width: 100%;
 }
+
+.expand-collapse-link {
+  font-weight: 600;
+  margin-top: 0.5rem;
+  text-decoration: underline;
+  cursor: pointer;
+}
