--- a/vyne-query-service/src/main/web/src/app/type-viewer/lineage-graph/service-lineage-graph.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/lineage-graph/service-lineage-graph.component.html
@@ -9,7 +9,7 @@
              [draggingEnabled]="true"
              [scheme]="colorScheme"
              [orientation]="orientation"
-             [curve]="curve" (select)="select($event)">
+             [curve]="curve">
     <ng-template #defsTemplate>
       <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto">
         <svg:path d="M0,-5L10,0L0,5" class="arrow-head"/>
