lineage display tweaks

--- a/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
+++ b/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
@@ -36,6 +36,19 @@
         <svg:text *ngIf="!showServiceName(node)" alignment-baseline="central" x="15" y="40" fill="#4e8dc0"
                   font-size="18">{{node.label}}
         </svg:text>
+
+<!--        <svg:foreignObject x="10" y="10" width="100" height="150">-->
+<!--          <xhtml:table xmlns="http://www.w3.org/1999/xhtml">-->
+<!--            <tr>-->
+<!--              <td>One</td>-->
+<!--              <td>Two</td>-->
+<!--            </tr>-->
+<!--            <tr>-->
+<!--              <td>One</td>-->
+<!--              <td>Two</td>-->
+<!--            </tr>-->
+<!--          </xhtml:table>-->
+<!--        </svg:foreignObject>-->
       </svg:g>
     </ng-template>
 
