--- a/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
+++ b/vyne-query-service/src/main/web/src/app/object-view/object-view.component.html
@@ -12,9 +12,9 @@
     <div class="attribute-name">
       {{ attributeName }}
     </div>
-    <div class="type-name-container table-cell">
-      <div class="type-name">{{ getTypeForAttribute(attributeName).name.name }}</div>
-    </div>
+<!--    <div class="type-name-container table-cell">-->
+<!--      <div class="type-name">{{ getTypeForAttribute(attributeName).name.name }}</div>-->
+<!--    </div>-->
     <div class="attribute-value table-cell"
          (click)="onAttributeClicked(attributeName)"
          [class.selectable]="selectable"
