--- a/vyne-query-service/src/main/web/src/app/pipelines/pipeline-view/pipeline-graph.component.html
+++ b/vyne-query-service/src/main/web/src/app/pipelines/pipeline-view/pipeline-graph.component.html
@@ -5,7 +5,7 @@
              [nodes]="graph.nodes"
              [autoZoom]="false"
              [autoCenter]="false"
-             [scheme]="colorScheme" [orientation]="orientation"
+             [scheme]="colorScheme"
              [curve]="curve">
 
     <ng-template #defsTemplate>
@@ -19,8 +19,8 @@
 
     <ng-template #nodeTemplate let-node>
       <svg:g class="node" style="filter:url(#shadow)">
-        <svg:path [attr.d]="outerRectangle(node.width, node.height)" stroke="#55ACD2" stroke-width="1.5" fill="white"></svg:path>
-<!--        <svg:path [attr.d]="innerRectangle(4, node.height)" stroke="none" fill="#FAC51D"></svg:path>-->
+        <svg:path [attr.d]="outerRectangle(node.dimension.width, node.dimension.height)" stroke="#55ACD2" stroke-width="1.5" fill="white"></svg:path>
+<!--        <svg:path [attr.d]="innerRectangle(4, node.dimension.height)" stroke="none" fill="#FAC51D"></svg:path>-->
         <svg:text alignment-baseline="central" x="15" y="15" fill="#7592a2" font-size="20">{{ node.label }}
         </svg:text>
       </svg:g>
