--- a/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
+++ b/vyne-query-service/src/main/web/src/app/lineage-display/lineage-display.component.html
@@ -20,8 +20,8 @@
 
     <ng-template #nodeTemplate let-node>
       <svg:g class="node" style="filter:url(#shadow)">
-        <svg:path [attr.d]="outerRectangle(node.width, node.height)" [attr.stroke]="getBorderColor(node)" stroke-width="0.5" [attr.fill]="getFill(node)"></svg:path>
-        <svg:path [attr.d]="innerRectangle(4, node.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
+        <svg:path [attr.d]="outerRectangle(node.dimension.width, node.dimension.height)" [attr.stroke]="getBorderColor(node)" stroke-width="0.5" [attr.fill]="getFill(node)"></svg:path>
+        <svg:path [attr.d]="innerRectangle(4, node.dimension.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
         <!--          <svg:rect [attr.width]="node.width" [attr.height]="node.height"-->
         <!--                    stoke-width="2"-->
         <!--                    [attr.fill]="getStroke(node)" stroke="#000000" rx="6" ry="6"/>-->
