--- a/vyne-query-service/src/main/web/src/app/type-viewer/lineage-graph/service-lineage-graph.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/lineage-graph/service-lineage-graph.component.html
@@ -8,7 +8,6 @@
              [autoCenter]="true"
              [draggingEnabled]="true"
              [scheme]="colorScheme"
-             [orientation]="orientation"
              [curve]="curve">
     <ng-template #defsTemplate>
       <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto">
@@ -21,8 +20,8 @@
 
     <ng-template #nodeTemplate let-node>
       <svg:g class="node" style="filter:url(#shadow)" >
-        <svg:path [attr.d]="outerRectangle(node.width, node.height)" stroke="none" fill="white"></svg:path>
-        <svg:path [attr.d]="innerRectangle(4, node.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
+        <svg:path [attr.d]="outerRectangle(node.dimension.width, node.dimension.height)" stroke="none" fill="white"></svg:path>
+        <svg:path [attr.d]="innerRectangle(4, node.dimension.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
         <!--          <svg:rect [attr.width]="node.width" [attr.height]="node.height"-->
         <!--                    stoke-width="2"-->
         <!--                    [attr.fill]="getStroke(node)" stroke="#000000" rx="6" ry="6"/>-->
