--- a/vyne-query-service/src/main/web/src/theme.scss
+++ b/vyne-query-service/src/main/web/src/theme.scss
@@ -3,7 +3,9 @@
 @import 'node_modules/@angular/material/theming';
 @import "code-formatter-theme";
 
+$sidenav-width: 230px;
 $toolbar-height: 5rem;
+
 .page-content {
   padding: 2rem;
   background-color: $body-bg;
@@ -91,4 +93,13 @@ $border-highlight: rgba($vyne-lilac, 0.6);
     margin-right: 1.5rem;
   }
 
+}
+
+.fullscreen {
+  position: fixed;
+  top: $toolbar-height + 2rem;
+  height: calc(100vh - (#{$toolbar-height} + 4rem));
+  left: $sidenav-width + 20px;
+  width: calc(100vw - (#{$sidenav-width} + 60px));
+  z-index: 2000;
 }
