better error handling when schema editing is not enabled

--- a/vyne-query-service/src/main/web/src/theme.scss
+++ b/vyne-query-service/src/main/web/src/theme.scss
@@ -77,7 +77,7 @@ $border-highlight: rgba($vyne-lilac, 0.6);
   display: flex;
   background-color: rgba($warning-2, 0.15);
   border: 2px solid rgba($warning-2, 0.8);
-  margin: 1rem;
+  margin: 1rem 0;
   border-radius: 4px;
   color: darken($warning-2, 20%);
   padding: 1rem;
