--- a/vyne-query-service/src/main/web/src/forms.scss
+++ b/vyne-query-service/src/main/web/src/forms.scss
@@ -1,8 +1,12 @@
 @import "typography";
 
 .form-container {
-  width: 50vw;
+  // MP 6-Dec Why did we have this?  It looks silly on a laptop
+  // screen - max-width, in a flex with margin:auto
+  // seems to work better.
+  //width: 50vw;
   max-width: 1200px;
+
 }
 
 
@@ -17,7 +21,12 @@
     p:first-child {
       margin-top: 0;
     }
+    li {
+      line-height: 2;
+    }
   }
+
+
 
   .help-text {
     width: 24rem;
